kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-backend
  namespace: jerney-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jerney-backend
  template:
    metadata:
      labels:
        app: jerney-backend
    spec:
      containers:
      - name: jerney-backend
        image: bunny9988/jerney-backend:1.0
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
