kubernetes/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgress-deployment
  namespace: jerney-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgress-sql
  template:
    metadata:
      labels:
        app: postgress-sql
    spec:
      
      containers:
      - name: postgress-sql
        image: postgres:16-alpine
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
       
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: jerney-pvc
