kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-frontend
  namespace: jerney-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jerney-frontend
  template:
    metadata:
      labels:
        app: jerney-frontend
    spec:
      containers:
      - name: jerney-frontend
        image: bunny9988/jerney-frontend:1.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
