kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jerney-backend
  namespace: jerney-namespace
spec:
  selector:
    app: jerney-backend
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
