kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgress-service
  namespace: jerney-namespace
spec:
  selector:
    app: postgress-sql
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
