kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jerney-frontend
  namespace: jerney-namespace
spec:
  type: ClusterIP
  selector:
    app: jerney-frontend
  ports:
  - port: 80
    targetPort: 80
